# Crust

./: .CMakeLists.txt  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Makefile  README.md  x86_64.cmake
.cargo/: config.toml
include/: compile_time.h  stdafx.h
src/: lib.rs  main.c  main.rs
src/bda/: bda_utils.c  bda_utils.h
src/boot/: GDT.h
src/graphics/: vga_mode.c  vga_text.c  vga_text.h
src/grub/: grub.cfg
src/platform/grub/: grub.cfg
src/platform/x86_64/: long-mode-init.asm
src/std/: stdbool.h
src/x86_64/: grub.cfg
